--- a/index.html
+++ b/index.html
@@ -5,32 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intagram-Clone</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 <body>
+    <div class="container">
     <div class="image-example">
-        <img src="./assets/img/instagram-celular.png" alt="example-mobile">
+        <img class="instagram-image" src="./assets/img/instagram-celular.png" alt="example-mobile">
     </div>
     <div class="data">
         <div class="box box-login">
             <img src="./assets/img/instagram-logo.png" alt="">
             <form action="#" class="login-form">
-                <input type="text">
-                <input type="password">
-                <button type="submit">Entrar</button>
+                <div class="input-group">
+                    <input type="email" id="email">
+                    <label for="email">Email ou telefone</label>
+                </div>
+                <div class="input-group">
+                    <input type="password" name="" id="senha">
+                    <label for="senha">Senha</label>
+                </div>
+
+                <button type="submit"  class="btn btn-primary">Entrar</button>
             </form>
             <div class="divisor">
-                <hr>OU <hr>
+                <div class="border"></div>OU <div class="border"></div>
+            </div>
+            <div class="other-login">
+                <a class="facebook-link" href="https://facebook.com.br">Entrar com Facebook</>
+                <a class="remember-link" href="#">Esqueceu a senha ?</a>
             </div>
         </div>
-        <div class="box box-cadastro"></div>
+        <div class="box box-cadastro">
+            <p>Não tem conta ? <a herf="#" class="sing-up-link">Cadastre-se</a></p>
+        </div>
         <div class="data-rodape">
           <p>Obtenha o aplicativo.</p>
           <div class="stores">
-              <img src="" alt="">
-              <img src="" alt="">
+              <img class="store-image" src="./assets/img/apple-button.png" alt="">
+              <img class="store-image" src="./assets/img/googleplay-button.png" alt="">
           </div>
         </div>
     </div>
-    
+</div>  
 </body>
 </html>
